--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.0.4",
+    "react-scripts": "^2.1.3",
     "styled-components": "^4.1.3",
     "tone": "^0.12.80"
   },
@@ -24,5 +24,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {}
+  "devDependencies": {
+    "prop-types": "^15.6.2"
+  }
 }
